plugins {
	id 'java'
	// 260924 PIS MAC OS setting
	id 'eclipse'
	id 'war'
	id 'org.springframework.boot' version '4.1.1'
	id 'io.spring.dependency-management' version '1.1.7'
    	//id 'com.diffplug.spotless' version '6.25.0'
}

group = 'com.minilog'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'com.oracle.ojdbc:orai18n:19.3.0.0'
	
	// Swagger UI 설정
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.1.1'
	
	// JWT Library Setting
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.12.5'
    
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.5'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.12.5'
	
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.oracle.database.jdbc:ojdbc17'
	
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	
	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat-runtime'
			
	// JUnit 5 설정
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
	useJUnitPlatform()
	
	// 260924 pis lombok compile 에러 때문에 임시 비활성화 처리
    enabled = false
    
	// 테스트 실행시 상세한 결과 출력 활성화
	testLogging {
		// 테스츠 이벤트 중 어떤 것을 로그로 출력할지 결정
		events "passed", "skipped", "failed"
		// 테스트 케이스별 결과를 항상 출력하도록 설정
		outputs.upToDateWhen { false }
		// Java Agent 경고 메세지 억제
		jvmArgs '-XX:+EnableDynamicAgentLoading'
	}
}

// Spotless 플러그인 추가 : 코드 양식 자동 맞춤
/**
spotless {
	// Java 파일에 대한 포맷팅 설정 추가
	java {
		// Google Java Format 적용
		googleJavaFormat('1.22.0').aosp().reflowLongStrings()
	}
}
*/

// build 할 때 spotlessApply를 사용해 자동으로 코드양식을 맞춤
//build.dpendsOn 'spotlessApply'